# RoverLink

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ak09918.c  ak09918.h  app_main.c  comms.c  comms.h  display.c  display.h  encoder.c  encoder.h  i2c_bus.c  i2c_bus.h  imu.c  imu.h  ina219.c  ina219.h  kinematics.c  kinematics.h  motor.c  motor.h  odometry.c  odometry.h  oled.c  oled.h  ota.c  ota.h  pid.c  pid.h  qmi8658.c  qmi8658.h  uart_link.c  uart_link.h  ugv_packets.h
tools/: cmd_vel_test.py  ota_push.py  pid_tune.py  uart_cmd_vel.py  uart_sniff.py  ugv_packets.py
